Bug 514771 - On the first time that KRunner opens, it opens in the second monitor
Summary: On the first time that KRunner opens, it opens in the second monitor
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2026-01-18 00:08 UTC by Daniel (NIICKTCHUNS)
Modified: 2026-01-22 20:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel (NIICKTCHUNS) 2026-01-18 00:08:38 UTC
SUMMARY
When opening KRunner for the first time after booting up the PC, KRunner will ALWAYS open in the second monitor instead of the monitor that I'm with my cursor at, this is very annoying since it also opens the app in the second monitor instead of the monitor that I'm using

STEPS TO REPRODUCE
1. Update to 6.5.90
2. Restart
3. Open KRunner on a dual monitor setup (the second monitor being on the left)

OBSERVED RESULT
KRunner opens in the second monitor, being on the left, even tho my mouse is on the main monitor

EXPECTED RESULT
KRunner should open in the monitor that my cursor is at

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.18.5-arch1-1 Wayland
KDE Plasma Version: 6.5.90
KDE Frameworks Version: 6.22.0
Qt Version: 6.11.0

ADDITIONAL INFORMATION
I don't know if this was the behavior back in 6.5.5, but I'm almost sure that it wasn't
Comment 1 David Redondo 2026-01-19 12:18:48 UTC
Are you interacting with the pc beforehand or is opening krunner the first thing you do?
Are there other windows on which screen is the focused one?
Do you have krunner opening at the top or middle of your screen?
Comment 2 Daniel (NIICKTCHUNS) 2026-01-19 12:22:03 UTC
(In reply to David Redondo from comment #1)
> Are you interacting with the pc beforehand or is opening krunner the first
> thing you do?
> Are there other windows on which screen is the focused one?
> Do you have krunner opening at the top or middle of your screen?

Yep, I was using the PC before, editing, using the browser and etc, everything on the main monitor, with the focused window being on the main monitor
And I prefer my KRunner at the middle of the screen
Comment 3 Bug Janitor Service 2026-01-20 10:30:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6209
Comment 4 Vlad Zahorodnii 2026-01-21 16:38:31 UTC
Git commit 186b9c8665d0496054b0d937542f9f027aedeb68 by Vlad Zahorodnii.
Committed on 21/01/2026 at 13:36.
Pushed by vladz into branch 'master'.

krunner: Port away from LayerShellQt::Window::setScreenConfiguration()

This should harden krunner against QWindow::setGeometry() changing the
screen() to the wrong one.

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +5    -1    krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/186b9c8665d0496054b0d937542f9f027aedeb68
Comment 5 Vlad Zahorodnii 2026-01-21 18:42:40 UTC
Git commit f50de3f2b931cd6fab9548d4f10f0fabfd3a42e0 by Vlad Zahorodnii.
Committed on 21/01/2026 at 17:38.
Pushed by vladz into branch 'Plasma/6.6'.

krunner: Port away from LayerShellQt::Window::setScreenConfiguration()

This should harden krunner against QWindow::setGeometry() changing the
screen() to the wrong one.

Co-authored-by: David Redondo <kde@david-redondo.de>


(cherry picked from commit 186b9c8665d0496054b0d937542f9f027aedeb68)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +5    -1    krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f50de3f2b931cd6fab9548d4f10f0fabfd3a42e0