krunner: Set window position to make Qt pick the correct screen

When creating a platform window Qt will assign a screen based
on the position of the window regardless of setScreen calls
beforehand. Note that calling setScreen when the window does
not have a platform window yet calls does *not* change the
window position.
The workaround is inside the wayland block because during testing
on X11 it caused the window sometimes to show on the wrong screen.
BUG:514771
FIXED-IN:6.6.0